seebeck/gpib488.h


//
// Address type (for 488.2 calls)
//
typedef short Addr4882_t;  // System dependent: must be 16 bits
   #define ibrdf(ud, filename)   ibrdfW(ud, filename)
   #define ibwrtf(ud, filename)  ibwrtfW(ud, filename)
   #define ibrdf(ud, filename)   ibrdfA(ud, filename)
   #define ibwrtf(ud, filename)  ibwrtfA(ud, filename)

unsigned long ibpct    (int ud);

unsigned long ibppc    (int ud, int v);

unsigned long ibrd     (int ud, void * buf, size_t cnt);

unsigned long ibrpp    (int ud, char * ppr);

unsigned long ibrsp    (int ud, char * spr);

unsigned long ibsic    (int ud);

unsigned long ibstop   (int ud);

unsigned long ibtrg    (int ud);

unsigned long ibwait   (int ud, int mask);

unsigned long ibwrt    (int ud, const void * buf, size_t cnt);

//
// Function to access process-wide GPIB global variables
//
unsigned long Ibsta(void);

unsigned long Iberr(void);

unsigned long Ibcnt(void);


//
// Functions to access Thread-local GPIB global variables
//
unsigned long ThreadIbsta(void);

unsigned long ThreadIberr(void);

unsigned long ThreadIbcnt(void);

//
//  Multi-Device Function Prototypes
//
void AllSpoll       (int boardID, const Addr4882_t * addrlist, short * results);

void DevClear       (int boardID, Addr4882_t addr);

void DevClearList   (int boardID, const Addr4882_t * addrlist);

void EnableLocal    (int boardID, const Addr4882_t * addrlist);

void EnableRemote   (int boardID, const Addr4882_t * addrlist);

void FindLstn       (int boardID, const Addr4882_t * addrlist, Addr4882_t * results, size_t limit);

void FindRQS        (int boardID, const Addr4882_t * addrlist, short * dev_stat);

void PPoll          (int boardID, short * result);

void PPollConfig    (int boardID, Addr4882_t addr, int dataLine, int lineSense);

void PPollUnconfig  (int boardID, const Addr4882_t * addrlist);

void PassControl    (int boardID, Addr4882_t addr);

void RcvRespMsg     (int boardID, void * buffer, size_t cnt, int Termination);

void ReadStatusByte (int boardID, Addr4882_t addr, short * result);

void Receive        (int boardID, Addr4882_t addr, void * buffer, size_t cnt, int Termination);

void ReceiveSetup   (int boardID, Addr4882_t addr);

void ResetSys       (int boardID, const Addr4882_t * addrlist);

void Send           (int boardID, Addr4882_t addr, const void * databuf, size_t datacnt, int eotMode);

void SendCmds       (int boardID, const void * buffer, size_t cnt);

void SendDataBytes  (int boardID, const void * buffer, size_t cnt, int eot_mode);

void SendIFC        (int boardID);

void SendLLO        (int boardID);

void SendList       (int boardID, const Addr4882_t * addrlist, const void * databuf, size_t datacnt, int eotMode);

void SendSetup      (int boardID, const Addr4882_t * addrlist);

void TestSRQ        (int boardID, short * result);