GPIB-488/Language Interfaces/C#/Backup/Gpib488.cs


		[DllImport(_GpibDll, EntryPoint="ibpct")]
		private static extern int _ibpct(int ud);
		public static int ibpct(int ud)
		{
			return _ibpct(ud);
		}

		[DllImport(_GpibDll, EntryPoint="ibppc")]
		private static extern int _ibppc(int ud, int v);
		public static int ibppc(int ud, int v)
		{
			return _ibppc(ud, v);
		}

		[DllImport(_GpibDll, EntryPoint="ibrd")]
		private static extern int _ibrd(int ud, [MarshalAs(UnmanagedType.LPStr)] StringBuilder buffer, IntPtr count);
		public static int ibrd(int ud, StringBuilder buffer, int count)
		{
			return _ibrd(ud, buffer, (IntPtr)count);
		}

		[DllImport(_GpibDll, EntryPoint="ibrd")]
		private static extern int _ibrd(int ud, byte[] buffer, IntPtr count);
		public static int ibrd(int ud, byte[] buffer, int count)
		{
			return _ibrd(ud, buffer, (IntPtr)count);
		}

		[DllImport(_GpibDll, EntryPoint="ibrdf")]
		private static extern int _ibrdf(int ud, string filename);
		public static int ibrdf(int ud, string filename)
		{
			return _ibrdf(ud, filename);
		}

		[DllImport(_GpibDll, EntryPoint="ibrpp")]
		private static extern int _ibrpp(int ud, out byte ppr);
		public static int ibrpp(int ud, out byte ppr)
		{
			return _ibrpp(ud, out ppr);
		}

		[DllImport(_GpibDll, EntryPoint="ibrsp")]
		private static extern int _ibrsp(int ud, out byte spr);
		public static int ibrsp(int ud, out byte spr)
		{
			return _ibrsp(ud, out spr);
		}

		[DllImport(_GpibDll, EntryPoint="ibsic")]
		private static extern int _ibsic(int ud);
		public static int ibsic(int ud)
		{
			return _ibsic(ud);
		}

		[DllImport(_GpibDll, EntryPoint="ibstop")]
		private static extern int _ibstop(int ud);
		public static int ibstop(int ud)
		{
			return _ibstop(ud);
		}

		[DllImport(_GpibDll, EntryPoint="ibtrg")]
		private static extern int _ibtrg(int ud);
		public static int ibtrg(int ud)
		{
			return _ibtrg(ud);
		}

		[DllImport(_GpibDll, EntryPoint="ibwait")]
		private static extern int _ibwait(int ud, int mask);
		public static int ibwait(int ud, int mask)
		{
			return _ibwait(ud, mask);
		}

		[DllImport(_GpibDll, EntryPoint="ibwrt")]
		private static extern int _ibwrt(int ud, byte[] buffer, IntPtr count);
		public static int ibwrt(int ud, byte[] buffer, int count)
		{
			return _ibwrt(ud, buffer, (IntPtr)count);
		}

		[DllImport(_GpibDll, EntryPoint="ibwrt")]
		private static extern int _ibwrt(int ud, string buffer, IntPtr count);
		public static int ibwrt(int ud, string buffer, int count)
		{
			return _ibwrt(ud, buffer, (IntPtr)count);
		}

		[DllImport(_GpibDll, EntryPoint="ibwrtf")]
		private static extern int _ibwrtf(int ud, string filename);
		public static int ibwrtf(int ud, string filename)
		{
			return _ibwrtf(ud, filename);
		}

		/////

		[DllImport(_GpibDll, EntryPoint="Ibsta")]
		private static extern int _Ibsta();
		public static int Ibsta()
		{
			return _Ibsta();
		}

		[DllImport(_GpibDll, EntryPoint="Iberr")]
		private static extern int _Iberr();
		public static int Iberr()
		{
			return _Iberr();
		}

		[DllImport(_GpibDll, EntryPoint="Ibcnt")]
		private static extern int _Ibcnt();
		public static int Ibcnt()
		{
			return _Ibcnt();
		}

		/////

		[DllImport(_GpibDll, EntryPoint="ThreadIbsta")]
		private static extern int _ThreadIbsta();
		public static int ThreadIbsta()
		{
			return _ThreadIbsta();
		}

		[DllImport(_GpibDll, EntryPoint="ThreadIberr")]
		private static extern int _ThreadIberr();
		public static int ThreadIberr()
		{
			return _ThreadIberr();
		}

		[DllImport(_GpibDll, EntryPoint="ThreadIbcnt")]
		private static extern int _ThreadIbcnt();
		public static int ThreadIbcnt()
		{
			return _ThreadIbcnt();
		}

		/////

		[DllImport(_GpibDll, EntryPoint="AllSpoll")]
		private static extern void _AllSpoll(int board, short[] addrlist, short[] results);
		public static void AllSpoll(int board, short[] addrlist, short[] results)
		{
			_AllSpoll(board, addrlist, results);
		}

		[DllImport(_GpibDll, EntryPoint="DevClear")]
		private static extern void _DevClear(int board, short address);
		public static void DevClear(int board, short address)
		{
			_DevClear(board, address);
		}

		[DllImport(_GpibDll, EntryPoint="DevClearList")]
		private static extern void _DevClearList(int board, short[] addrlist);
		public static void DevClearList(int board, short[] addrlist)
		{
			_DevClearList(board, addrlist);
		}

		[DllImport(_GpibDll, EntryPoint="EnableLocal")]
		private static extern void _EnableLocal(int board, short[] addrlist);
		public static void EnableLocal(int board, short[] addrlist)
		{
			_EnableLocal(board, addrlist);
		}

		[DllImport(_GpibDll, EntryPoint="EnableRemote")]
		private static extern void _EnableRemote(int board, short[] addrlist);
		public static void EnableRemote(int board, short[] addrlist)
		{
			_EnableRemote(board, addrlist);
		}

		[DllImport(_GpibDll, EntryPoint="FindLstn")]
		private static extern void _FindLstn(int board, short[] addrlist, short[] results, IntPtr limit);
		public static void FindLstn(int board, short[] addrlist, short[] results, int limit)
		{
			_FindLstn(board, addrlist, results, (IntPtr)limit);
		}

		[DllImport(_GpibDll, EntryPoint="FindRQS")]
		private static extern void _FindRQS(int board, short[] addrlist, out short devstat);
		public static void FindRQS(int board, short[] addrlist, out short devstat)
		{
			_FindRQS(board, addrlist, out devstat);
		}

		[DllImport(_GpibDll, EntryPoint="PPoll")]
		private static extern void _PPoll(int board, out short result);
		public static void PPoll(int board, out short result)
		{
			_PPoll(board, out result);
		}

		[DllImport(_GpibDll, EntryPoint="PPollConfig")]
		private static extern void _PPollConfig(int board, short address, int dataline, int linesense);
		public static void PPollConfig(int board, short address, int dataline, int linesense)
		{
			_PPollConfig(board, address, dataline, linesense);
		}

		[DllImport(_GpibDll, EntryPoint="PPollUnconfig")]
		private static extern void _PPollUnconfig(int board, short[] addrlist);
		public static void PPollUnconfig(int board, short[] addrlist)
		{
			_PPollUnconfig(board, addrlist);
		}

		[DllImport(_GpibDll, EntryPoint="PassControl")]
		private static extern void _PassControl(int board, short address);
		public static void PassControl(int board, short address)
		{
			_PassControl(board, address);
		}

		[DllImport(_GpibDll, EntryPoint="RcvRespMsg")]
		private static extern void _RcvRespMsg(int board, byte[] buffer, IntPtr count, int termination);
		public static void RcvRespMsg(int board, byte[] buffer, int count, int termination)
		{
			_RcvRespMsg(board, buffer, (IntPtr)count, termination);
		}

		[DllImport(_GpibDll, EntryPoint="RcvRespMsg")]
		private static extern void _RcvRespMsg(int board, [MarshalAs(UnmanagedType.LPStr)]StringBuilder buffer, IntPtr count, int termination);
		public static void RcvRespMsg(int board, [MarshalAs(UnmanagedType.LPStr)]StringBuilder buffer, int count, int termination)
		{
			_RcvRespMsg(board, buffer, (IntPtr)count, termination);
		}

		[DllImport(_GpibDll, EntryPoint="ReadStatusByte")]
		private static extern void _ReadStatusByte(int board, short addr, out short result);
		public static void ReadStatusByte(int board, short addr, out short result)
		{
			_ReadStatusByte(board, addr, out result);
		}

		[DllImport(_GpibDll, EntryPoint="Receive")]
		private static extern void _Receive(int board, short address, byte[] buffer, IntPtr count, int termination);
		public static void Receive(int board, short address, byte[] buffer, int count, int termination)
		{
			_Receive(board, address, buffer, (IntPtr)count, termination);
		}

		[DllImport(_GpibDll, EntryPoint="Receive")]
		private static extern void _Receive(int board, short address, [MarshalAs(UnmanagedType.LPStr)]StringBuilder buffer, IntPtr count, int termination);
		public static void Receive(int board, short address, [MarshalAs(UnmanagedType.LPStr)]StringBuilder buffer, int count, int termination)
		{
			_Receive(board, address, buffer, (IntPtr)count, termination);
		}

		[DllImport(_GpibDll, EntryPoint="ReceiveSetup")]
		private static extern void _ReceiveSetup(int board, short address);
		public static void ReceiveSetup(int board, short address)
		{
			_ReceiveSetup(board, address);
		}

		[DllImport(_GpibDll, EntryPoint="ResetSys")]
		private static extern void _ResetSys(int board, short[] addrlist);
		public static void ResetSys(int board, short[] addrlist)
		{
			_ResetSys(board, addrlist);
		}

		[DllImport(_GpibDll, EntryPoint="Send")]
		private static extern void _Send(int board, short address, byte[] buffer, IntPtr count, int eotmode);
		public static void Send(int board, short address, byte[] buffer, int count, int eotmode)
		{
			_Send(board, address, buffer, (IntPtr)count, eotmode);
		}

		[DllImport(_GpibDll, EntryPoint="Send")]
		private static extern void _Send(int board, short address, string buffer, IntPtr count, int eotmode);
		public static void Send(int board, short address, string buffer, int count, int eotmode)
		{
			_Send(board, address, buffer, (IntPtr)count, eotmode);
		}

		[DllImport(_GpibDll, EntryPoint="SendCmds")]
		private static extern void _SendCmds(int board, byte[] buffer, IntPtr count);
		public static void SendCmds(int board, byte[] buffer, int count)
		{
			_SendCmds(board, buffer, (IntPtr)count);
		}

		[DllImport(_GpibDll, EntryPoint="SendCmds")]
		private static extern void _SendCmds(int board, string buffer, IntPtr count);
		public static void SendCmds(int board, string buffer, int count)
		{
			_SendCmds(board, buffer, (IntPtr)count);
		}

		[DllImport(_GpibDll, EntryPoint="SendDataBytes")]
		private static extern void _SendDataBytes(int board, byte[] buffer, IntPtr count, int eotmode);
		public static void SendDataBytes(int board, byte[] buffer, int count, int eotmode)
		{
			_SendDataBytes(board, buffer, (IntPtr)count, eotmode);
		}

		[DllImport(_GpibDll, EntryPoint="SendDataBytes")]
		private static extern void _SendDataBytes(int board, string buffer, IntPtr count, int eotmode);
		public static void SendDataBytes(int board, string buffer, int count, int eotmode)
		{
			_SendDataBytes(board, buffer, (IntPtr)count, eotmode);
		}

		[DllImport(_GpibDll, EntryPoint="SendIFC")]
		private static extern void _SendIFC(int board);
		public static void SendIFC(int board)
		{
			_SendIFC(board);
		}

		[DllImport(_GpibDll, EntryPoint="SendLLO")]
		private static extern void _SendLLO(int board);
		public static void SendLLO(int board)
		{
			_SendLLO(board);
		}

		[DllImport(_GpibDll, EntryPoint="SendList")]
		private static extern void _SendList(int board, short[] addrlist, byte[] buffer, IntPtr count, int eotmode);
		public static void SendList(int board, short[] addrlist, byte[] buffer, int count, int eotmode)
		{
			_SendList(board, addrlist, buffer, (IntPtr)count, eotmode);
		}

		[DllImport(_GpibDll, EntryPoint="SendList")]
		private static extern void _SendList(int board, short[] addrlist, string buffer, IntPtr count, int eotmode);
		public static void SendList(int board, short[] addrlist, string buffer, int count, int eotmode)
		{
			_SendList(board, addrlist, buffer, (IntPtr)count, eotmode);
		}

		[DllImport(_GpibDll, EntryPoint="SendSetup")]
		private static extern void _SendSetup(int board, short[] addrlist);
		public static void SendSetup(int board, short[] addrlist)
		{
			_SendSetup(board, addrlist);
		}

		[DllImport(_GpibDll, EntryPoint="SendRWLS")]
		private static extern void _SendRWLS(int board, short[] addrlist);
		public static void SendRWLS(int board, short[] addrlist)
		{
			_SendRWLS(board, addrlist);
		}

		[DllImport(_GpibDll, EntryPoint="TestSRQ")]
		private static extern void _TestSRQ(int board, out short result);
		public static void TestSRQ(int board, out short result)
		{
			_TestSRQ(board, out result);
		}
